--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <version>1.16.20</version>
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.25</version>
+      </dependency>
   </dependencies>
 
   <build>
